# torrent-manager

./: .dockerignore  .gitmodules  Dockerfile  README.rst  config.yml  docker-compose.debug.yml  docker-compose.yml  dockerfile  poetry.md  pyproject.toml  requirements.txt  run.py  torrent-manager.code-workspace  torrent-manager.py
Docker/: Dockerfile  docker-compose.debug.yml  docker-compose.yml  test.sh
autoremovetorrents/: logger.py  main.py
autoremovetorrents/client/: transmission.py
torrent-manager/: torrent-manager.py
torrent-manager/autoremovetorrents/: main.py  strategy.py
