[tool.poetry]
name = "torrent-manager"
version = "1.0.3"
description = ""
authors = ["Jason Rhubottom <jason@rhusoft.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
pyyaml = "^5.3.1"
enum34 = "^1.1.10"
ply = "^3.11"
psutil = "^5.7.0"
deluge-client = "^1.9.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
